--- a/influxdb/influxdb-deploy.yaml
+++ b/influxdb/influxdb-deploy.yaml
@@ -26,8 +26,10 @@ spec:
         env:
           - name: INFLUXDB_GRAPHITE_ENABLED
             value: "true"
-          - name: ADMIN_BIND_ADDRESS
-            value: "0.0.0.0:8083"
+          # - name: ADMIN_BIND_ADDRESS
+          #   value: "0.0.0.0:8083"
+          - name: INFLUXDB_HTTP_AUTH_ENABLED
+            value: "true"
         livenessProbe:
           # # an http probe
           # httpGet:
