--- a/gitlab-ce/gitlab-ingress.yaml
+++ b/gitlab-ce/gitlab-ingress.yaml
@@ -2,7 +2,14 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: gitlab-ingress
+  annotations:
+    kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: "nginx"
 spec:
+  tls:
+  - hosts:
+    - gitlab.boul.nl
+    secretName: gitlab-tls
   rules:
   - host: gitlab.boul.nl
     http:
