--- a/grafana/grafana-ingress.yaml
+++ b/grafana/grafana-ingress.yaml
@@ -2,7 +2,14 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: grafana-ingress
+  annotations:
+    kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: "nginx"
 spec:
+  tls:
+  - hosts:
+    - grafana.boul.nl
+    secretName: grafana-tls
   rules:
   - host: grafana.boul.nl
     http:
@@ -11,6 +18,7 @@ spec:
         backend:
           serviceName: grafana
           servicePort: 3000
+
   # - host: bar.localhost
   #   http:
   #     paths:
