--- a/nginx-ingress/default-http-backend-deployment.yaml
+++ b/nginx-ingress/default-http-backend-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: default-http-backend
-  namespace: nginx-ingress
+  namespace: kube-system
 spec:
   replicas: 2
   template:
