--- a/nginx-ingress/default-http-backend-svc.yaml
+++ b/nginx-ingress/default-http-backend-svc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: default-http-backend
-  namespace: nginx-ingress
+  namespace: kube-system
 spec:
   ports:
   - port: 80
