--- a/nginx-ingress/nginx-svc.yaml
+++ b/nginx-ingress/nginx-svc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
-  namespace: nginx-ingress
+  namespace: kube-system
 spec:
   type: NodePort
   ports:
